<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".fragment.RegisterFragment">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayoutStyle"
        android:id="@+id/full_name_input"
        android:hint="@string/Full_name"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/email_input"
        >
        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputStyle"
            android:inputType="text|textAutoComplete"
            android:autofillHints="name"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayoutStyle"
        android:id="@+id/email_input"
        android:hint="@string/Email"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/full_name_input"
        app:layout_constraintBottom_toTopOf="@id/password_input"
        >
        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputStyle"
            android:inputType="textEmailAddress|textAutoComplete"
            android:autofillHints="emailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayoutStyle"
        android:id="@+id/password_input"
        android:hint="@string/Password"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_input"
        app:layout_constraintBottom_toTopOf="@id/submit_button"
        >
        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputStyle"
            android:inputType="textPassword"
            android:autofillHints="password"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonStyle"
        android:id="@+id/submit_button"
        android:text="@string/Register"
        app:layout_constraintTop_toBottomOf="@id/password_input"
        app:layout_constraintBottom_toTopOf="@id/auth_nav_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        style="@style/AuthNavButtonStyle"
        android:id="@+id/auth_nav_button"
        android:text="@string/I_already_have_an_account"
        app:layout_constraintTop_toBottomOf="@id/submit_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
